<resources>
    <string name="app_name">Android Checkboxes </string>
    <string name="title_TextView">List of Checkboxes for selection</string>
    <string name="android_CheckBox">Android</string>
    <string name="ios_CheckBox">IOS</string>
    <string name="windows_CheckBox">Windows</string>
    <string name="rim_CheckBox">RIM</string>
    <string name="content_resultButton">Click here to see Result</string>
    <string name="content_TextView">The following were selected...</string>
</resources>