<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_TextView"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textSize="26sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="131dp" />

    <CheckBox
        android:id="@+id/checkBoxAndroid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/android_CheckBox"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="158dp" />

    <CheckBox
        android:id="@+id/checkBoxIOS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ios_CheckBox"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxAndroid"
        tools:layout_editor_absoluteX="53dp" />

    <CheckBox
        android:id="@+id/checkBoxWindows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/windows_CheckBox"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxIOS"
        tools:layout_editor_absoluteX="77dp" />

    <CheckBox
        android:id="@+id/checkBoxRIM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rim_CheckBox"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxWindows"
        tools:layout_editor_absoluteX="95dp" />

    <Button
        android:id="@+id/buttonResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:text="@string/content_resultButton"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRIM"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/content_TextView"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/buttonResult"
        tools:layout_editor_absoluteX="218dp" />

    <TextView
        android:id="@+id/textViewShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="18sp"
        android:padding="14dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewResult"
        tools:layout_editor_absoluteX="78dp" />
</androidx.constraintlayout.widget.ConstraintLayout>